tests/cases/match/ok/match-range-overlap.ari
fn score(value: u8) -> i64 {
  match value {
    0..=10 => 1,
    10..=20 => 2,
    _ => 0,
  }
}

fn main() -> i64 {
  score(10u8)
}
