tests/cases/match/errors/match-range-pattern-nonexhaustive.ari
fn score(value: u8) -> i64 {
  return match value {
    0..=254 => 1,
  };
}

fn main() -> i64 {
  return score(1u8);
}
